# AutoImageGenerator

./: .cursorignore  .gitignore  README.md  extensions.txt  pyproject.toml
.cursor/rules/: auto-image-generator.mdc
autoimagegenerator/: __init__.py  auto_image_generator.py  create_output_folders.py  example.py  generate_animal_images.py  generate_pet_images.py  image_processing_batch.py  main copy 2.py  main copy.py  main.py  sample.settings.json  setup_pet_photography_prompts.py  test_pet_photography.py  weapon_validator.py
autoimagegenerator/docs/: usage_landscapeRealistic.md
autoimagegenerator/prompts/: brav6_cancel_seeds.json  brav6_negative.json  brav6_positive.json  brav6_positive_base.json  brav6_positive_cancel_pair.json  brav6_positive_optional.json  brav6_positive_optional2.json  brav6_positive_optional_NSFW.json  brav6_positive_pose.json  structure.txt
autoimagegenerator/tests/: README.md  run_tests.py  test_animal_image_generation.py  test_auto_image_generator.py  test_image_generation.py  test_image_save.py  test_image_type_model_selection.py  test_landscapeRealistic.py  test_lora_image_size.py  test_lora_motorcycle.py  test_main.py  test_motorcycle_prompts.py  test_rpg_icon_generation.py  test_rpg_icon_prompts.py  test_settings.json
docs/: README.md  folder_structure.md  installation.md  pet_photography_guide.md  prompt_settings.md  testing.md  troubleshooting.md  usage.md  usage_landscapeRealistic.md
docs/feature/: add_image_type_AnimagigaXL_yayoi.md  add_image_type_RPGIcon.md  (+8 more)
feature/: composer_sample.txt  feature_add_image_pattern.txt
(+186 files in other folders)
