[tool.poetry]
name = "autoimagegenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
image = "^1.5.33"
requests = "^2.31.0"
pillow = "^10.1.0"
tqdm = "^4.66.1"

[tool.poetry.scripts]
my-script = "autoimagegenerator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
